# swanny

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
dataplane-linux/: Cargo.toml
dataplane-linux/src/: main.rs  xfrm.rs
hack/: goss.yaml  test.sh
hack/dev/: dev_ed25519  dev_ed25519.pub
hack/init/: Makefile  base.bu  config.bu  strongswan.bu
ikev2/: Cargo.toml
ikev2/examples/: short-circuit.rs
ikev2/src/: config.rs  crypto.rs  lib.rs  message.rs  sa.rs  state.rs  tests.rs
ikev2/src/message/: num.rs  payload.rs  proposal.rs  serialize.rs  traffic_selector.rs  transform.rs
ikev2/src/sa/: state.rs
ikev2/src/state/: create_child_sa_request_sent.rs  delete_child_request_sent.rs  delete_child_sa_request_sent.rs  dpd_request_sent.rs  established.rs  ike_auth_request_sent.rs  ike_sa_init_request_sent.rs  ike_sa_init_response_sent.rs  initial.rs  new_child_sa_request_sent.rs  rekey_child_sa_request_sent.rs  rekey_ike_sa_request_sent.rs
ikev2/src/tests/: all_good.rs  create_child_sa.rs  dpd.rs  ike_auth.rs  ike_sa_init.rs
proto/: Cargo.toml  build.rs
proto/proto/zentria/swanny/v0/: tunnel.proto
proto/src/: lib.rs
server/: Cargo.toml  LICENSE.GPL-3.0
server/src/: config.rs  events.rs  grpc.rs  main.rs
swannyd/: Cargo.toml
swannyd/src/: config.rs  main.rs
tests/: setup-netns.sh  setup-policies.sh  setup-policy.sh  setup-tunnel-netns.sh
tests/e2e/: ike-rekey.sh  interop.sh  lib.sh  multi-sa.sh  strongswan-initiator.conf  strongswan-responder.conf  transport.sh  tunnel.sh
