[workspace]
members = [
    "ikev2", "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
bitflags = "2"
bytes = "1"
futures = "0.3"
netlink-packet-core = { version = "0.7.0" }
netlink-packet-xfrm = { version = "0.3.1" }
netlink-proto = "0.11.2"
num-traits = "0.2"
num-derive = "0.4"
swanny-ikev2 = { version = "=0.1.0", path = "ikev2" }
tokio = "1.23"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
