[workspace]
members = [
    "ikev2", "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Daiki Ueno <ueno@gnu.org>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bitflags = "2"
bytes = "1"
clap = "4"
futures = "0.3"
libc = "0.2"
netlink-packet-core = "0.7.0"
netlink-packet-xfrm = "0.3.1"
netlink-proto = "0.11.2"
num-traits = "0.2"
num-derive = "0.4"
openssl = "0.10"
swanny-ikev2 = { version = "=0.1.0", path = "ikev2" }
thiserror = "2"
tokio = "1.23"
tokio-util = "0.7"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
xfrmnetlink = "0.2"
zeroize = "1"
