[package]
name = "swanny-ikev2"
description = "IKEv2 message handling"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bitflags.workspace = true
bytes.workspace = true
futures.workspace = true
num-traits.workspace = true
num-derive.workspace = true
openssl.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[[example]]
name = "short-circuit"
