[package]
name = "swanny-ikev2"
description = "IKEv2 message handling"
version.workspace = true
edition.workspace = true
license = "LGPL-2.1-or-later"

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
bytes.workspace = true
futures.workspace = true
num-traits.workspace = true
num-derive.workspace = true
openssl.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
anyhow.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[example]]
name = "short-circuit"
