[package]
name = "swanny-server"
description = "Experimental IKEv2 server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-2.0-or-later"

[features]
vendored-openssl = ["swanny-ikev2/vendored-openssl"]

[[bin]]
name = "swanny"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
cidr.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
futures.workspace = true
libc.workspace = true
netlink-packet-core.workspace = true
netlink-packet-xfrm.workspace = true
netlink-proto.workspace = true
swanny-ikev2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "io-util"] }
tokio-util = { workspace = true, features = ["codec", "net"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
xfrmnetlink.workspace = true
