[package]
name = "swanny-server"
description = "Experimental IKEv2 server"
version.workspace = true
edition.workspace = true
authors.workspace = true
# TODO: clarify intended license with Daiki Ueno (GPL-2.0-or-later vs GPL-3.0-or-later)
license = "GPL-2.0-or-later"

[features]
vendored-openssl = ["swanny-ikev2/vendored-openssl"]

[[bin]]
name = "swanny"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
cidr.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
futures.workspace = true
prost-types.workspace = true
swanny-ikev2.workspace = true
swanny-proto.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "time", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["codec", "net"] }
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
